--- a/src/pages/page404.html
+++ b/src/pages/page404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Контакты</title>
+    <title>404 - страница не найдена</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                             <a href="payment.html" class="site-navigation__link">Оплата</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a class="site-navigation__link">Контакты</a>
+                            <a href="contacts.html" class="site-navigation__link">Контакты</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="training.html" class="site-navigation__link">Обучение</a>
@@ -133,136 +133,68 @@
                         <a href="index.html" class="breadcrumbs__link">Главная</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link--active">Контакты</a>
+                        <a class="breadcrumbs__link--active">Страница 404</a>
                     </li>
                 </ul>
             </div>
 
-            <section class="contacts">
-                <h1 class="section__title">Контакты</h1>
-                <span class="contacts__descr">
-                    По вопросам заказа товара вы можете связаться с нами любым удобным для вас способом - по офисному
-                    телефону, с помощью мобильных мессенджеров или соцсетей. Ваше сообщение также будет доставлено нам.
-                </span>
-                <div class="contacts__wrapper">
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--line">Линия консультаций</h2>
-                        <span class="contacts-item__descr contacts-item__descr--line">
-                            По любому вопросу вы можете обратиться к нашему боту в телеграмм, вибер или скайп он
-                            адресует ваше сообщение доступному сотруднику
-                        </span>
-                        <ul class="contacts-item-social__list">
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--tg">
-                                    <span class="visually-hidden">Телеграм.</span>
-                                </a>
-                            </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--whatsapp">
-                                    <span class="visually-hidden">Whatsapp.</span>
-                                </a>
-                            </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--vk">
-                                    <span class="visually-hidden">Вконтакте.</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--mail">E-mail</h2>
-                        <a href="mailto:info@test.com" class="contacts__mail-link">info@test.com</a>
-                    </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--social">Наши страницы в соцсетях</h2>
-                        <ul class="contacts-item-social__list">
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--tg">
-                                    <span class="visually-hidden">Телеграм.</span>
-                                </a>
-                            </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--vk">
-                                    <span class="visually-hidden">Вконтакте.</span>
-                                </a>
-                            </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--youtube">
-                                    <span class="visually-hidden">Youtube.</span>
-                                </a>
-                            </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--inst">
-                                    <span class="visually-hidden">Инстаграм.</span>
-                                </a>
-                            </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--pinterest">
-                                    <span class="visually-hidden">Пинтерест.</span>
-                                </a>
-                            </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--tiktok">
-                                    <span class="visually-hidden">Тикток.</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--phone">Телефоны</h2>
-                        <div class="contacts-item__phone-wrapper">
-                            <a href="tel:+7800000000" class="contacts-item__phone-link">+7 (800) 00-00-00</a>
-                            <span class="contacts-item__descr">
-                                Пн-Пт: 9:00 — 19:00 Сб: 10:00 — 14:00
-                            </span>
-                            <span class="contacts-item__descr--phone">
-                                Если звонок по заказу - пожалуйста звоните с номера, который указан как контактный
-                                телефон при оформлении заказа. Это очень ускорит решение вашего вопроса.
-                            </span>
-                        </div>
-                        <div class="contacts-item__phone-wrapper">
-                            <a href="tel:+7800000000" class="contacts-item__phone-link">+7 (800) 00-00-00</a>
-                            <span class="contacts-item__descr">
-                                Пн-Пт: 9:00 — 19:00 Сб: 10:00 — 14:00
-                            </span>
-                            <span class="contacts-item__descr--phone">
-                                Смс, телеграмм, вибер, воцап - по срокам получения заказа)
-                            </span>
-                        </div>
-                    </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--requisites">Реквизиты</h2>
-                        <span class="contacts-item__descr--big">ООО «Название»</span>
-                        <span class="contacts-item__descr--bold">Юридический и фактический адрес:</span>
-                        <span class="contacts-item__address">ОГРН</span>
-                        <span class="contacts-item__address">Р/с</span>
-                        <span class="contacts-item__address">К/с</span>
-                        <span class="contacts-item__address">БИК</span>
-                    </div>
-                    <form action="#" class="main-banner__form main-banner__form--contacts">
-                        <h2 class="contacts-item__form">Оставить заявку на консультацию</h2>
-                        <label class="main-banner__tel-wrapper">
-                            <span class="visually-hidden">Введите ваше имя.</span>
-                            <input type="text" class="main-banner__tel-input"
-                                placeholder="Ваше имя" required>
-                        </label>
-                        <label class="main-banner__tel-wrapper">
-                            <span class="visually-hidden">Введите ваш номер телефона.</span>
-                            <input type="tel" class="main-banner__tel-input"
-                                placeholder="+7 ( _ _ _ ) _ _ _ - _ _ - _ _ " required>
-                        </label>
-                        <button type="submit" class="basket__buy">Связаться с нами</button>
-                        <label class="main-banner__checkbox-wrapper">
-                            <input type="checkbox" class="main-banner__checkbox visually-hidden" name="agreement"
-                                checked>
-                            <span class="main-banner__checkbox__mark"></span>
-                            <span class="main-banner__checkbox__text">
-                                Нажимая «Оставить завку», я соглашаюсь c обработкой
-                                персональных данных на условиях <a href="#">Политики конфиденциальности.</a>
-                            </span>
-                        </label>
-                    </form>
-                </div>
+            <section class="page404">
+                <span class="page404__code">#404</span>
+                <h1 class="page404__title">что то пошло не так страница не найдена</h1>
+            </section>
+            <!-- каталог товаров -->
+            <section class="main-catalog">
+                <h1 class="section__title main-catalog__title">Каталог товаров</h1>
+                <ul class="main-catalog__list">
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/филлеры.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Филлеры</a></h3>
+                    </li>
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/биоревитализация.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Биоревитализация</a></h3>
+                    </li>
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/биопрепаранты.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Биорепаранты</a></h3>
+                    </li>
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/пилинги.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Пилинги</a></h3>
+                    </li>
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/уход-за-лицом.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Уход за лицом</a></h3>
+                    </li>
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/уход-за-телом.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Уход за телом</a></h3>
+                    </li>
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/инъекции.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Инъекционные препараты</a></h3>
+                    </li>
+                    <li class="main-catalog__item">
+                        <a href="category.html" class="main-catalog__preview">
+                            <img src="./assets/img/загар.webp" alt="Товар." class="main-catalog__img">
+                        </a>
+                        <h3 class="main-catalog__name"><a href="category.html">Средства для загара</a></h3>
+                    </li>
+                </ul>
             </section>
         </main>
 
@@ -530,8 +462,8 @@
         </footer>
     </div>
 
-    <div class="decorative decorative__right decorative__right--favorites"></div>
-    <div class="decorative decorative__left decorative__left--contacts"></div>
+    <div class="decorative decorative__right decorative__right--making-order"></div>
+    <div class="decorative decorative__left decorative__left--making-order"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
 </body>
 
