--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -133,7 +133,7 @@
                         <a href="index.html" class="breadcrumbs__link">Главная</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link--active">О компании</a>
+                        <a class="breadcrumbs__link--active">Отзывы</a>
                     </li>
                 </ul>
             </div>
@@ -589,7 +589,7 @@
                                         <a href="blog.html" class="footer__link">Статьи</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Вопрос-Ответ</a>
+                                        <a href="faq.html" class="footer__link">Вопрос-Ответ</a>
                                     </li>
                                 </ul>
                             </div>
@@ -758,7 +758,7 @@
                     </div>
                     <div class="footer__different">
                         <a href="#" class="footer__offer">Публичная оферта</a>
-                        <a href="#" class="footer__map">Карта сайта</a>
+                        <a href="site-map.html" class="footer__map">Карта сайта</a>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
