--- a/src/pages/site-map.html
+++ b/src/pages/site-map.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Контакты</title>
+    <title>Карта сайта</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                             <a href="payment.html" class="site-navigation__link">Оплата</a>
                         </li>
                         <li class="site-navigation__item">
-                            <a class="site-navigation__link">Контакты</a>
+                            <a href="contacts.html" class="site-navigation__link">Контакты</a>
                         </li>
                         <li class="site-navigation__item">
                             <a href="training.html" class="site-navigation__link">Обучение</a>
@@ -133,137 +133,157 @@
                         <a href="index.html" class="breadcrumbs__link">Главная</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link--active">Контакты</a>
+                        <a class="breadcrumbs__link--active">Карта сайта</a>
                     </li>
                 </ul>
             </div>
 
-            <section class="contacts">
-                <h1 class="section__title">Контакты</h1>
-                <span class="contacts__descr">
-                    По вопросам заказа товара вы можете связаться с нами любым удобным для вас способом - по офисному
-                    телефону, с помощью мобильных мессенджеров или соцсетей. Ваше сообщение также будет доставлено нам.
-                </span>
-                <div class="contacts__wrapper">
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--line">Линия консультаций</h2>
-                        <span class="contacts-item__descr contacts-item__descr--line">
-                            По любому вопросу вы можете обратиться к нашему боту в телеграмм, вибер или скайп он
-                            адресует ваше сообщение доступному сотруднику
-                        </span>
-                        <ul class="contacts-item-social__list">
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--tg">
-                                    <span class="visually-hidden">Телеграм.</span>
-                                </a>
+            <!-- Карта сайта -->
+            <section class="site-map">
+                <h1 class="site-map__title section__title">Карта сайта</h1>
+                <div class="site-map__content">
+                    <div class="site-map__wrapper">
+                        <span class="site-map__name">Для душа и ванны</span>
+                        <ul class="site-map__list">
+                            <li>
+                                <a href="category.html" class="site-map__link">Гели</a>
                             </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--whatsapp">
-                                    <span class="visually-hidden">Whatsapp.</span>
-                                </a>
+                            <li>
+                                <a href="category.html" class="site-map__link">Скрабы</a>
                             </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--vk">
-                                    <span class="visually-hidden">Вконтакте.</span>
-                                </a>
+                            <li>
+                                <a href="category.html" class="site-map__link">Мыло</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Соли</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Масла</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Молочко</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--mail">E-mail</h2>
-                        <a href="mailto:info@test.com" class="contacts__mail-link">info@test.com</a>
-                    </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--social">Наши страницы в соцсетях</h2>
-                        <ul class="contacts-item-social__list">
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--tg">
-                                    <span class="visually-hidden">Телеграм.</span>
-                                </a>
+                    <div class="site-map__wrapper">
+                        <span class="site-map__name">Для рук</span>
+                        <ul class="site-map__list">
+                            <li>
+                                <a href="category.html" class="site-map__link">Гели</a>
                             </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--vk">
-                                    <span class="visually-hidden">Вконтакте.</span>
-                                </a>
+                            <li>
+                                <a href="category.html" class="site-map__link">Скрабы</a>
                             </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--youtube">
-                                    <span class="visually-hidden">Youtube.</span>
-                                </a>
+                            <li>
+                                <a href="category.html" class="site-map__link">Мыло</a>
                             </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--inst">
-                                    <span class="visually-hidden">Инстаграм.</span>
-                                </a>
+                            <li>
+                                <a href="category.html" class="site-map__link">Соли</a>
                             </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--pinterest">
-                                    <span class="visually-hidden">Пинтерест.</span>
-                                </a>
+                            <li>
+                                <a href="category.html" class="site-map__link">Масла</a>
                             </li>
-                            <li class="contacts-item-social__item">
-                                <a href="#" class="contacts-item-social__link contacts-item-social__link--tiktok">
-                                    <span class="visually-hidden">Тикток.</span>
-                                </a>
+                            <li>
+                                <a href="category.html" class="site-map__link">Молочко</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--phone">Телефоны</h2>
-                        <div class="contacts-item__phone-wrapper">
-                            <a href="tel:+7800000000" class="contacts-item__phone-link">+7 (800) 00-00-00</a>
-                            <span class="contacts-item__descr">
-                                Пн-Пт: 9:00 — 19:00 Сб: 10:00 — 14:00
-                            </span>
-                            <span class="contacts-item__descr--phone">
-                                Если звонок по заказу - пожалуйста звоните с номера, который указан как контактный
-                                телефон при оформлении заказа. Это очень ускорит решение вашего вопроса.
-                            </span>
-                        </div>
-                        <div class="contacts-item__phone-wrapper">
-                            <a href="tel:+7800000000" class="contacts-item__phone-link">+7 (800) 00-00-00</a>
-                            <span class="contacts-item__descr">
-                                Пн-Пт: 9:00 — 19:00 Сб: 10:00 — 14:00
-                            </span>
-                            <span class="contacts-item__descr--phone">
-                                Смс, телеграмм, вибер, воцап - по срокам получения заказа)
-                            </span>
-                        </div>
+                    <div class="site-map__wrapper">
+                        <span class="site-map__name">Уход за телом</span>
+                        <ul class="site-map__list">
+                            <li>
+                                <a href="category.html" class="site-map__link">Кремы</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Гели</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Масла</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Молочко</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Наборы для ухода</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Спреи</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Бальзамы</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Лосьоны</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Маски</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Пилинги</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Эмульсии</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="contacts__item">
-                        <h2 class="contacts-item__name contacts-item__name--requisites">Реквизиты</h2>
-                        <span class="contacts-item__descr--big">ООО «Название»</span>
-                        <span class="contacts-item__descr--bold">Юридический и фактический адрес:</span>
-                        <span class="contacts-item__address">ОГРН</span>
-                        <span class="contacts-item__address">Р/с</span>
-                        <span class="contacts-item__address">К/с</span>
-                        <span class="contacts-item__address">БИК</span>
+                    <div class="site-map__wrapper">
+                        <span class="site-map__name">Солнце</span>
+                        <ul class="site-map__list">
+                            <li>
+                                <a href="category.html" class="site-map__link">Солнцезащитные</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">После загара</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Для детей</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Для усиления</a>
+                            </li>
+                        </ul>
                     </div>
-                    <form action="#" class="main-banner__form main-banner__form--contacts">
-                        <h2 class="contacts-item__form">Оставить заявку на консультацию</h2>
-                        <label class="main-banner__tel-wrapper">
-                            <span class="visually-hidden">Введите ваше имя.</span>
-                            <input type="text" class="main-banner__tel-input"
-                                placeholder="Ваше имя" required>
-                        </label>
-                        <label class="main-banner__tel-wrapper">
-                            <span class="visually-hidden">Введите ваш номер телефона.</span>
-                            <input type="tel" class="main-banner__tel-input"
-                                placeholder="+7 ( _ _ _ ) _ _ _ - _ _ - _ _ " required>
-                        </label>
-                        <button type="submit" class="basket__buy">Связаться с нами</button>
-                        <label class="main-banner__checkbox-wrapper">
-                            <input type="checkbox" class="main-banner__checkbox visually-hidden" name="agreement"
-                                checked>
-                            <span class="main-banner__checkbox__mark"></span>
-                            <span class="main-banner__checkbox__text">
-                                Нажимая «Оставить завку», я соглашаюсь c обработкой
-                                персональных данных на условиях <a href="#">Политики конфиденциальности.</a>
-                            </span>
-                        </label>
-                    </form>
+                    <div class="site-map__wrapper">
+                        <span class="site-map__name">Бренды</span>
+                        <ul class="site-map__list">
+                            <li>
+                                <a href="category.html" class="site-map__link">Кремы</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Гели</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Масла</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Молочко</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Наборы для ухода</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Спреи</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Бальзамы</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Лосьоны</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Маски</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Пилинги</a>
+                            </li>
+                            <li>
+                                <a href="category.html" class="site-map__link">Эмульсии</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
+
         </main>
 
         <footer class="footer">
@@ -516,7 +536,7 @@
                     </div>
                     <div class="footer__different">
                         <a href="#" class="footer__offer">Публичная оферта</a>
-                        <a href="site-map.html" class="footer__map">Карта сайта</a>
+                        <a  class="footer__map">Карта сайта</a>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
@@ -531,7 +551,7 @@
     </div>
 
     <div class="decorative decorative__right decorative__right--favorites"></div>
-    <div class="decorative decorative__left decorative__left--contacts"></div>
+    <div class="decorative decorative__left decorative__left--favorites"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
 </body>
 
