--- a/src/pages/webinar.html
+++ b/src/pages/webinar.html
@@ -133,10 +133,10 @@
                         <a href="index.html" class="breadcrumbs__link">Главная</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a href="catalog.html" class="breadcrumbs__link">Каталог</a>
+                        <a href="training.html" class="breadcrumbs__link">Обучение</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link--active">Уход за телом</a>
+                        <a class="breadcrumbs__link--active">Вебинар</a>
                     </li>
                 </ul>
             </div>
@@ -637,7 +637,7 @@
                                         <a href="blog.html" class="footer__link">Статьи</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Вопрос-Ответ</a>
+                                        <a href="faq.html" class="footer__link">Вопрос-Ответ</a>
                                     </li>
                                 </ul>
                             </div>
@@ -806,7 +806,7 @@
                     </div>
                     <div class="footer__different">
                         <a href="#" class="footer__offer">Публичная оферта</a>
-                        <a href="#" class="footer__map">Карта сайта</a>
+                        <a href="site-map.html" class="footer__map">Карта сайта</a>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
