--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -133,10 +133,7 @@
                         <a href="index.html" class="breadcrumbs__link">Главная</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a href="basket.html" class="breadcrumbs__link">Каталог</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link--active">Уход за лицом</a>
+                        <a class="breadcrumbs__link--active">Блог</a>
                     </li>
                 </ul>
             </div>
@@ -757,7 +754,7 @@
                                         <a href="#" class="footer__link">Статьи</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Вопрос-Ответ</a>
+                                        <a href="faq.html" class="footer__link">Вопрос-Ответ</a>
                                     </li>
                                 </ul>
                             </div>
@@ -926,7 +923,7 @@
                     </div>
                     <div class="footer__different">
                         <a href="#" class="footer__offer">Публичная оферта</a>
-                        <a href="#" class="footer__map">Карта сайта</a>
+                        <a href="site-map.html" class="footer__map">Карта сайта</a>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
