--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -133,7 +133,7 @@
                         <a href="index.html" class="breadcrumbs__link">Главная</a>
                     </li>
                     <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link--active">О компании</a>
+                        <a class="breadcrumbs__link--active">Вопрос эксперту</a>
                     </li>
                 </ul>
             </div>
@@ -585,7 +585,7 @@
                     </div>
                     <div class="footer__different">
                         <a href="#" class="footer__offer">Публичная оферта</a>
-                        <a href="#" class="footer__map">Карта сайта</a>
+                        <a href="site-map.html" class="footer__map">Карта сайта</a>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
