--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -898,7 +898,7 @@
                                         <a href="blog.html" class="footer__link">Статьи</a>
                                     </li>
                                     <li class="footer__item">
-                                        <a href="category.html" class="footer__link">Вопрос-Ответ</a>
+                                        <a href="faq.html" class="footer__link">Вопрос-Ответ</a>
                                     </li>
                                 </ul>
                             </div>
@@ -1067,7 +1067,7 @@
                     </div>
                     <div class="footer__different">
                         <a href="#" class="footer__offer">Публичная оферта</a>
-                        <a href="#" class="footer__map">Карта сайта</a>
+                        <a href="site-map.html" class="footer__map">Карта сайта</a>
                     </div>
                 </div>
                 <div class="footer__row footer__row--third">
