--- a/src/pages/basket.html
+++ b/src/pages/basket.html
@@ -485,7 +485,7 @@
                             <span class="visually-hidden">Вконтакте.</span>
                         </a>
                         <a href="#" class="footer__social__link footer__social__link--telegram">
-                            <span class="visually-hidden">Телеграм.</span>slider__btns
+                            <span class="visually-hidden">Телеграм.</span>
                         </a>
                     </div>
                 </div>
