--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -142,13 +142,13 @@
                 <h1 class="reviews__title section__title">Отзывы</h1>
                 <div class="main__tabs main__tabs--products main__tabs--reviews">
                     <ul class="main__tabs__list main__tabs__list--reviews">
-                        <li class="main__tabs__item">Отзывы клиентов</li>
-                        <li class="main__tabs__item main__tabs__item--active">Отзовики</li>
+                        <li class="main__tabs__item main__tabs__item--active">Отзывы клиентов</li>
+                        <li class="main__tabs__item">Отзовики</li>
                     </ul>
                     <button class="reviews__btn footer__application">Оставить отзыв</button>
                 </div>
                 <div class="main__tabs__content">
-                    <div class="main__tabs__content-item">
+                    <div class="main__tabs__content-item main__tabs__content-item--active">
                         <ul class="reviews-clients__list">
                             <li class="reviews-clients__item main-reviews__item">
                                 <div class="reviews-clients__first-row">
@@ -475,7 +475,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="main__tabs__content-item main__tabs__content-item--active">
+                    <div class="main__tabs__content-item">
                         <div class="reviews-service">
                             <div class="reviews-service__descr">
                                 За многолетний опыт более 1000 клиентов оценили результат, написали рекомендации.
